Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-11631

Impala crashes in impala::TopNNode::Heap::Close()

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 4.0.0, Impala 4.1.0
    • Impala 4.2.0, Impala 4.1.1
    • Backend
    • None
    • ghx-label-10

    Description

      Impala release version would crash in TopN Node Close() https://github.com/apache/impala/blob/68650057a163ac23e1ca85b7d9d8dbfd975a69ff/be/src/exec/topn-node.cc#L522  if memory allocation fails at https://github.com/apache/impala/blob/68650057a163ac23e1ca85b7d9d8dbfd975a69ff/be/src/exec/topn-node.cc#L759 and partition_heaps_ is not empty.

      SQL:
      select ss_sold_time_sk, rn from (select *, row_number() over (partition by ss_item_sk order by ss_sold_time_sk) as rn from tpcds.store_sales) v where rn < 10 order by rn;
      Stacktrace:

      #0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51
      #1  0x00007f42cb03e7f1 in __GI_abort () at abort.c:79
      #2  0x00007f42cdfb0969 in os::abort(bool) () from /usr/lib/jvm/java-8-openjdk-amd64/jre/lib/amd64/server/libjvm.so
      #3  0x00007f42ce18d923 in VMError::report_and_die() () from /usr/lib/jvm/java-8-openjdk-amd64/jre/lib/amd64/server/libjvm.so
      #4  0x00007f42cdfbb134 in JVM_handle_linux_signal () from /usr/lib/jvm/java-8-openjdk-amd64/jre/lib/amd64/server/libjvm.so
      #5  0x00007f42cdfad608 in signalHandler(int, siginfo_t*, void*) () from /usr/lib/jvm/java-8-openjdk-amd64/jre/lib/amd64/server/libjvm.so
      #6  <signal handler called>
      #7  0x0000000001874220 in impala::TopNNode::Heap::Close() () at /impala/Impala/be/src/exec/topn-node.cc:746
      #8  0x0000000001878b71 in impala::TopNNode::Close (this=0x9e1f600, state=0xc25f840) at /impala/Impala/be/src/exec/topn-node.cc:522
      #9  0x00000000012aea46 in impala::FragmentInstanceState::Close (this=this@entry=0xc7f3a00) at /impala/Impala/be/src/runtime/fragment-instance-state.cc:493
      #10 0x00000000012b157a in impala::FragmentInstanceState::Exec (this=this@entry=0xc7f3a00) at /impala/Impala/be/src/runtime/fragment-instance-state.cc:110
      #11 0x0000000001233841 in impala::QueryState::ExecFInstance (this=0x8ca8000, fis=0xc7f3a00) at /impala/Impala/be/src/runtime/query-state.cc:1023
      #12 0x0000000001729915 in boost::function0<void>::operator() (this=0x7f4192158be0) at /impala/Impala/toolchain/toolchain-packages-gcc7.5.0/boost-1.74.0-p1/include/boost/function/function_template.hpp:763

      Attachments

        Activity

          People

            baggio000 Yida Wu
            baggio000 Yida Wu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: